THRIFT-5816 Fix UUID for boost 1.86.0 (change in {{data}} member usage) client: cpp Patch: Carel Combrink

This closes #3035